examples/test/testpolicy14479.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14479
  namespace: namespace73
spec:
  podSelector:
    matchLabels:
      key37: value46
      key24: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value35
      podSelector:
        matchLabels:
          key19: value44
          key35: value49
          key27: value4
